tests/errors/syn_switch3.java
public class syn_switch3 {
public static void main(String[] args){
switch ( args.length ) {

}
}